--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,11 +16,10 @@
         <a href="/contact">Contact</a>
     </nav>
 
+    {{{body}}}
 
-
-    <h1>Welcome</h1>
-    <h2>Trash Kitchen - Best pizzas in town!!</h2>
-
-    <img src="/images/home.jpg" alt="">
+    <footer>
+        &copy; 2023 TechTrash
+    </footer>
 </body>
 </html>
