--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,3 +30,36 @@ nav a {
     width: auto;
 }
 
+#summary-board {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    flex-wrap: wrap;
+    justify-items: center;
+    gap: 40px;
+    text-decoration: none;
+    margin: 50px;
+}
+
+#summary-board a{
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: bold;
+}
+
+.summary-item {
+    width: 300px;
+    height: 200px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    padding : 10px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 10px;
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+
+.summary-item img{
+    max-height: 150px;
+    margin: 10px;
+}
