--- a/views/homepage.html
+++ b/views/homepage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
 
     <link rel="stylesheet" href="/css/main.css">
 </head>
+
 <body>
     <nav>
         <a href="/">Home</a>
@@ -22,5 +24,33 @@
     <h2>Trash Kitchen - Best pizzas in town!!</h2>
 
     <img src="/images/home.jpg" alt="">
+
+    <section>
+        <h3> Search by price</h3>
+        <form method="GET" action="/pizzas">
+            <label>
+                Enter max price:
+                <input type="number" min="1" min="99" name="maxPrice" >
+            </label>
+            <button type="submit">Search</button>
+
+        </form>
+    </section>
+
+    <section>
+        <h3> Login</h3>
+        <form method="POST" action="/login">
+            <label>
+                Enter password:
+                <input type="password" name="pwd" >
+            </label>
+            <button type="submit">Search</button>
+
+        </form>
+    </section>
+
+
+
 </body>
+
 </html>
